; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_ranges.c_rangelist_remove_at.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_ranges.c_rangelist_remove_at.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RangeList = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.RangeList*, i64)* @rangelist_remove_at to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rangelist_remove_at(%struct.RangeList* %0, i64 %1) #0 {
  %3 = alloca %struct.RangeList*, align 8
  %4 = alloca i64, align 8
  store %struct.RangeList* %0, %struct.RangeList** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.RangeList*, %struct.RangeList** %3, align 8
  %6 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %5, i32 0, i32 1
  %7 = load i32*, i32** %6, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i32, i32* %7, i64 %8
  %10 = load %struct.RangeList*, %struct.RangeList** %3, align 8
  %11 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = add i64 %13, 1
  %15 = getelementptr inbounds i32, i32* %12, i64 %14
  %16 = load %struct.RangeList*, %struct.RangeList** %3, align 8
  %17 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64, i64* %4, align 8
  %20 = sub i64 %18, %19
  %21 = mul i64 %20, 4
  %22 = call i32 @memmove(i32* %9, i32* %15, i64 %21)
  %23 = load %struct.RangeList*, %struct.RangeList** %3, align 8
  %24 = getelementptr inbounds %struct.RangeList, %struct.RangeList* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = add i64 %25, -1
  store i64 %26, i64* %24, align 8
  ret void
}

declare dso_local i32 @memmove(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
